--- a/index.html
+++ b/index.html
@@ -74,9 +74,27 @@
 
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="static/images/tu1.png" alt=""></div>
-                        <div class="swiper-slide"><img src="static/images/tu1.png" alt=""></div>
-                        <div class="swiper-slide"><img src="static/images/tu1.png" alt=""></div>
+                        <div class="swiper-slide" style="position: relative">
+                            <div class="img_text">
+                                <h1>办公体验，不止于“简单”</h1>
+                                <ul>
+                                    <li>
+                                        <img src="static/images/sweiper_img_01.png" alt="">
+                                        <p>标准化</p>
+                                    </li>
+                                    <li>
+                                        <img src="static/images/sweiper_img_02.png" alt="">
+                                        <p>可视化</p>
+                                    </li>
+                                    <li>
+                                        <img src="static/images/sweiper_img_03.png" alt="">
+                                        <p>可控化</p>
+                                    </li>
+                                </ul>
+                            </div>
+                            <img src="static/images/tu1.png" alt=""></div>
+<!--                        <div class="swiper-slide"><img src="static/images/tu1.png" alt=""></div>-->
+<!--                        <div class="swiper-slide"><img src="static/images/tu1.png" alt=""></div>-->
                     </div>
 
                     <!-- 如果需要导航按钮 -->
@@ -234,12 +252,12 @@
                         <h2>服务内容</h2>
                     </div>
                     <ul class="row">
-                        <li class="col-lg-2 col-sm-4 col-xs-6 wow zoomIn" style="background: url('./static/images/service01.png') no-repeat center; "></li>
-                        <li class="col-lg-2 col-sm-4 col-xs-6 wow zoomIn" style="background: url('./static/images/service02.png') no-repeat center; "></li>
-                        <li class="col-lg-2 col-sm-4 col-xs-6 wow zoomIn" style="background: url('./static/images/service03.png') no-repeat center; "></li>
-                        <li class="col-lg-2 col-sm-4 col-xs-6 wow zoomIn" style="background: url('./static/images/service04.png') no-repeat center; "></li>
-                        <li class="col-lg-2 col-sm-4 col-xs-6 wow zoomIn" style="background: url('./static/images/service05.png') no-repeat center; "></li>
-                        <li class="col-lg-2 col-sm-4 col-xs-6 wow zoomIn" style="background: url('./static/images/service06.png') no-repeat center; "></li>
+                        <li class="col-lg-2 col-sm-4 col-xs-6 wow zoomIn service_img"><img src="static/images/service01.png" alt=""><p class="service_p">物联网基础</p></li>
+                        <li class="col-lg-2 col-sm-4 col-xs-6 wow zoomIn service_img"><img src="static/images/service02.png" alt=""><p class="service_p">物联网应用</p></li>
+                        <li class="col-lg-2 col-sm-4 col-xs-6 wow zoomIn service_img"><img src="static/images/service03.png" alt=""><p class="service_p">GIS应用开发</p></li>
+                        <li class="col-lg-2 col-sm-4 col-xs-6 wow zoomIn service_img"><img src="static/images/service04.png" alt=""><p class="service_p">行业网站建设</p></li>
+                        <li class="col-lg-2 col-sm-4 col-xs-6 wow zoomIn service_img"><img src="static/images/service05.png" alt=""><p class="service_p">文印系统解决方案</p></li>
+                        <li class="col-lg-2 col-sm-4 col-xs-6 wow zoomIn service_img"><img src="static/images/service06.png" alt=""><p class="service_p">技术及方案咨询</p></li>
                     </ul>
                 </div>
             </div>
