--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="service container">
+                <div class="service">
                     <div class="row">
                         <h2>服务内容</h2>
                     </div>
