--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <script src="static/js/aos.js"></script>
 </head>
 <style>
+    @media screen and (min-width: 1201px){
+        .container {
+            width: 1200px;
+        }
+    }
     @media screen and (min-width: 1920px){
         .swiper-slide img {
             width: 10rem;
@@ -106,7 +111,30 @@
                                 </ul>
                             </div>
                             <img src="static/images/tu1.png" alt=""></div>
-<!--                        <div class="swiper-slide"><img src="static/images/tu1.png" alt=""></div>-->
+                        <div class="swiper-slide"><img src="static/images/tu2.png" alt="">
+                            <div class="img_text2">
+                                <h1>万物互联  智能领先</h1>
+                                <h2>一体化物联网解决方案</h2>
+                                <ul>
+                                    <li>
+                                        <img src="static/images/six.png" alt="">
+                                        <p>智能</p>
+                                    </li>
+                                    <li>
+                                        <img src="static/images/six.png" alt="">
+                                        <p>灵活</p>
+                                    </li>
+                                    <li>
+                                        <img src="static/images/six.png" alt="">
+                                        <p>实用</p>
+                                    </li>
+                                    <li>
+                                        <img src="static/images/six.png" alt="">
+                                        <p>高效</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
 <!--                        <div class="swiper-slide"><img src="static/images/tu1.png" alt=""></div>-->
                     </div>
 
@@ -302,8 +330,6 @@
             </div>
         </div>
         </div>
-
-
 
 
 
